--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -363,6 +363,27 @@ input[type="file"] {
   text-align: center;
 }
 
+.main-info {
+  display: flex;
+  flex-direction: column;
+}
+
+.application-info {
+  width: 360px;
+  /* min-height: 320px; */
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+}
+
+@media (max-width: 784px) {
+  .application-info {
+    width: 320px;
+    height: auto;
+  }
+}
+
 @media (max-width: 984px) {
   .header-empty {
     display: block;
